    serial4-9 are advanced options. You can optionally
    specify base addresses for any serial ports. When
    the "file" option is used, you can additionally
    specify a program to open the file with "openwith"
    option. If the specified program cannot be executed
    due to some problem, DOSBox-X will try to start a
    program as specified with the "openerror" action,
    or it will show an error. (Wengier)
  - Extended parallel (LPT) ports from LPT1-LPT3 to
    LPT1-LPT9 in the [parallel] section. Config options
    lpt4-9 are advanced config options. You can also
    optionally specify base addresses and IRQs for
    these ports. The parallel1-9 config options are
    enhanced to allow the generated files to be started
    with the specified action: "openpcl" to start a
    program to open the file if the print output is
    detected to be PCL; "openps" to start a program if
    the print output is detected to be PostScript (PS);
    "openwith" to start a program otherwise. If you'd
    like to specify parameters then be sure to properly
    quote the string(s). Furthermore, if any of the
    specified program(s) cannot be executed, DOSBox-X
    will try to start a program as specified with the
    "openerror" action, or show an error. (Wengier)
  - Implemented file locking support for mounting disk
    image files so that you cannot mount the same disk
    image files in read/write mode at the same time as
    this can cause possible disk corruptions. A config
    option "locking disk image mount" is added to the
    [dosbox] section which when set to false (or if the
    user mounts the image files read-only) will bypass
    the locking of image files. (Wengier)
  - You can now use a single mapper file for both SDL1
    and SDL2 versions of DOSBox-X! The new mapper file
    will be divided to sections [SDL1] and [SDL2] for
    both versions. The mapper file can be specified
    with the mapperfile config option, or you can set