@@ -37,7 +37,10 @@
     option. If the specified program cannot be executed
     due to some problem, DOSBox-X will try to start a
     program as specified with the "openerror" action,
-    or it will show an error. (Wengier)
+    or it will show an error. For both serial (COM) and
+    parallel (LPT) ports options, the program commands
+    can be quoted with double quotes, or with single
+    quotes if the "squote" option is added. (Wengier)
   - Extended parallel (LPT) ports from LPT1-LPT3 to
     LPT1-LPT9 in the [parallel] section. Config options
     lpt4-9 are advanced config options. You can also
